Fix search result pagination color contrast accessibility issues Override blacklight kaminari views to add aria-disabled for disabled links Override bootstrap styles to ensure dark text color is used for spans in pagination (current page and ellipsis gap)

--- a/app/assets/stylesheets/blacklight.scss
+++ b/app/assets/stylesheets/blacklight.scss
@@ -57,3 +57,7 @@
   color: white !important;
   background-color: #f44336 !important;
 }
+
+.page-item span.page-link {
+  color: $dark !important;
+}
